# nix-python-minimal-container-issue

./: .gitignore  Dockerfile  Dockerfile.nix  Makefile  flake.nix  pyproject.toml
app/: main.py
